fixes UI bugs on mobile

--- a/client/sass/_grid-layout.scss
+++ b/client/sass/_grid-layout.scss
@@ -1,5 +1,4 @@
 
-
 .grid {
   display: flex;
   flex-wrap: wrap;
@@ -15,17 +14,14 @@
     padding: 24px;
     background-color: white;
     transition: all 500ms;
-    @media all and (min-width: 816px){
+    @media all and (min-width: 816px) {
       &:nth-child(3n) {
         margin: 0 0 8px 0;
       }
     }
-    @media all and (max-width: 561px){
+    @media all and (max-width: 561px) {
       width: 100%;
       margin: 0 0 24px 0;
-    }
-    &:hover {
-      background-color: #fafafa;
     }
     h3 {
       font-weight: 400;
@@ -58,15 +54,17 @@
       font-size: 11px;
       font-weight: 400;
       transition: all 300ms;
-      &:hover {
-        background-color: $violet;
-        color: white;
+      @media (hover: hover) {
+        &:hover {
+          background-color: $violet;
+          color: white;
+        }
       }
     }
   }
 }
 
-@media all and (min-width: 561px) and (max-width: 816px){
+@media all and (min-width: 561px) and (max-width: 816px) {
   .grid {
     .grid-item {
       width: calc(50% - 6px);
@@ -76,8 +74,6 @@
     }
   }
 }
-
-
 
 #grid {
   display: grid;
